@@ -1,3 +1,6 @@
+May 18, 2021
+  agr extractor: date_produced field aligned with DQM requirements
+
 Apr 29, 2021
   rat strains: added code to generate gff3 files and tracks for mutant and congenic strains on assembly 7.2
   rat qtls: added code to generate gff3 files and tracks for qtls on assembly 7.2
